@@ -90,6 +90,8 @@ when displaying error messages and the like in the session message panel.
 Finished German translation
 
 Bug-Fixes:
+1752089 (ConcurrentModificationException raised when loading schema)
+
 1716859 Can't see data in content tab or row count tab (MS SQLServer databases
         with a dash ("-") in their name would cause the content tab or row count
         tabs to render no data.
